[gd_scene load_steps=5 format=3 uid="uid://vyqalhrsyfxb"]

[ext_resource type="Script" uid="uid://bp51ao4vbuhpb" path="res://Scripts/game_win.gd" id="1_4coss"]
[ext_resource type="Texture2D" uid="uid://bg6c6nbib5tc1" path="res://Assets/Art/background.png" id="2_er4tp"]
[ext_resource type="FontFile" uid="uid://n0iud8xj3blu" path="res://Assets/Art/OS X Darwin.ttf" id="2_jupbu"]
[ext_resource type="AudioStream" uid="uid://ce7mnm6k67lqk" path="res://Assets/Sound/button_select.wav" id="4_5sxg3"]

[node name="GameWin" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 576.0
offset_top = 324.0
offset_right = 616.0
offset_bottom = 364.0
script = ExtResource("1_4coss")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -183.5
offset_top = -72.5
offset_right = 183.5
offset_bottom = 72.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.960784, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_jupbu")
theme_override_font_sizes/font_size = 64
text = "TIMELINE CORRUPTED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="quit_button" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0.960784, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0.960784, 0, 1)
theme_override_fonts/font = ExtResource("2_jupbu")
theme_override_font_sizes/font_size = 32
text = "RESET CURRENT TIMELINE"

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(10, 10)
texture = ExtResource("2_er4tp")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.5, 1.5)

[node name="quit_button_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_5sxg3")

[node name="transition" type="Timer" parent="."]

[connection signal="pressed" from="CanvasLayer/VBoxContainer/quit_button" to="." method="_on_quit_button_pressed"]
[connection signal="timeout" from="transition" to="." method="_on_transition_timeout"]
